oxiplate/tests/crates/escaper-without-default-escaper-group/tests/broken/unregistered-escaper-group.stderr
error: The specified escaper group `html` is not registered in `/oxiplate.toml`. Registered escaper groups:
 --> tests/broken/unregistered-escaper-group.rs:4:19
  |
4 | #[oxiplate_inline(html: "{{ text: message }}")]
  |                   ^^^^
